index.css
html, body {
    margin: 0;
    padding: 0;
    font-family: 'Rubik', sans-serif;
    background-color: #1B1924;
    color: #FFF;
    user-select: none;
}

.container {
    display: flex;
    flex-direction: column;
    width: auto;
    margin: 30px auto;
    background-color: red;
}

.upperContainer {
    display: flex;
    flex-direction: column;
    width: auto;
    margin: 30px auto;
    background-color: red;
}

.lowerContainer {
    display: flex;
    flex-direction: column;
    width: auto;
    margin: 30px auto;
    background-color: red;
}

/* Large */
.navigation {
  display: flex;
  flex-flow: row wrap;
  /* This aligns items to the end line on main-axis */
  justify-content: flex-end;
}

/* Medium screens */
@media all and (max-width: 800px) {
  .navigation {
    /* When on medium sized screens, we center it by evenly distributing empty space around items */
    justify-content: space-around;
  }
}

/* Small screens */
@media all and (max-width: 500px) {
  .navigation {
    /* On small screens, we are no longer using row direction but column */
    flex-direction: column;
  }
}

.fromToContainer {
    display: flex;
    flex-direction: row;
    background-color: yellow;
    justify-content: space-between;
    margin: 10px auto;
}

h1 {
    text-align: center;
}


img {
    width: 90px;
    margin: 0 auto;
}

#input-field {
    color: #8F8F8F;
    background-color: #444059;
    border: 0;
    padding: 15px;
    border-radius: 8px;
    font-size: 20px;
    text-align: center;
    font-family: 'Rubik', sans-serif;
    margin: 10px 0;
    width: 100%;
    box-sizing: border-box;
}

.subInput{
    color: #8F8F8F;
    background-color: #444059;
    border: 0;
    padding: 15px;
    border-radius: 8px;
    font-size: 20px;
    text-align: center;
    font-family: 'Rubik', sans-serif;
    width: 48%;
    box-sizing: border-box;
}

button {
    color: #04131C;
    background-color: #28A9F1;
    border: 0;
    padding: 15px;
    border-radius: 8px;
    font-size: 20px;
    text-align: center;
    font-family: 'Rubik', sans-serif;
    width: 100%;
}

ul {
    list-style-type: none;
    padding: 0;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    gap: 10px;
}

ul li {
    font-size: 20px;
    background-color: #FFF;
    color: #1B1924;
    padding: 15px;
    border-radius: 8px;
    width: 100%;
    text-align: center;
    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2) ;
    box-sizing: border-box;

}

